created Swagger for OrderController (all metods)